# aoc

./: .gitignore  Cargo.toml  README.md
aoc/: Cargo.toml
aoc/src/: config.rs  direction.rs  input.rs  io.rs  lib.rs  map.rs  math.rs  summed_area_table.rs
aoc2016/: Cargo.toml
aoc2016/data/day23/: input
aoc2016/data/day25/: input.disasm
aoc2016/src/: asmbunny.rs  lib.rs  map.rs
aoc2017/: Cargo.toml
aoc2017/data/day20/: debug
aoc2017/data/day23/: input_annotated
aoc2017/src/: knothash.rs  lib.rs
aoc2018/: Cargo.toml
aoc2018/data/day17/: example2  example3  example4  example5
aoc2018/data/day19/: input_annotated
aoc2018/data/day21/: input_annotated
aoc2018/src/: vm.rs
aoc2020/: Cargo.toml
aoc2020/data/day19/: example2
aoc2020/src/: code.rs  day02.pest  day04.pest  lib.rs  search.rs
aoc2021/: Cargo.toml
aoc2021/data/day12/: input.dot
aoc2021/data/day22/: debug2
aoc2021/data/day23/: block  input_b
aoc2021/data/day24/: input_decomp
aoc2021/src/: io.rs
aoc2022/: Cargo.toml
aoc2022/data/day25/: example
aoc2023/: Cargo.toml
aoc2024/: Cargo.toml
aoc2024/utils/day24/: index.html
aoc2025/: Cargo.toml
