[package]
name = "aoc"
version = "0.1.0"
authors = ["Stefan Seemayer <stefan@seemayer.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
strum = { version = "0.24", features = ["derive"] }
thiserror = "1"
num = "0.3.1"
