[package]
name = "aoc"
version = "0.1.0"
authors = ["Stefan Seemayer <stefan@seemayer.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
strum = { version = "0.24", features = ["derive"] }
thiserror = "1"
num = "0.3.1"
reqwest = { version = "0.11.23", features = ["blocking"] }
serde = { version = "1.0.195", features = ["derive"] }
chrono = { version = "0.4.31", features = ["serde"] }
toml = "0.8.8"
dirs = "5.0.1"
clap = { version = "4.4.15", features = ["derive"] }
