[package]
name = "aoc2016"
version = "0.1.0"
authors = ["Stefan Seemayer <stefan@seemayer.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
aoc = { path = "../aoc" }
regex = "1.4.2"
lazy_static = "1.4.0"
md5 = "0.7.0"
itertools = "0.9.0"
hex = "0.4.2"
num = "0.3.1"
