[package]
name = "aoc2017"
version = "0.1.0"
authors = ["Stefan Seemayer <stefan@seemayer.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
aoc = { path = "../aoc/" }
colored = "2"
lazy_static = "1.4.0"
regex = "1.4.2"
num = "0.3.1"
