[package]
name = "aoc2018"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
aoc = { path = "../aoc/" }
colored = "2"
lazy_static = "1"
regex = "1"
strum = { version = "0.24", features = ["derive"] }
thiserror = "1"
