[package]
name = "aoc2020"
version = "0.1.0"
authors = ["Stefan Seemayer <stefan@seemayer.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc = { path = "../aoc/" }
snafu = "0.6.10"
pest = "2.1.3"
pest_derive = "2.1.0"
bit-set = "0.5.2"
regex = "1.4.2"
lazy_static = "1.4.0"
num = "0.3.1"
itertools = "0.9.0"
