[package]
name = "aoc2024"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
aoc = { path = "../aoc/" }
colored = "2"
itertools = "0.13.0"
lazy_static = "1"
nalgebra = "0.33.2"
num = "0.4.0"
regex = "1"
strum = { version = "0.24.1", features = ["derive"] }
thiserror = "1"
