[package]
name = "aoc2025"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
aoc = { path = "../aoc/" }
bit-set = "0.8.0"
colored = "2"
good_lp = { version = "1.14.2", features = ["scip", "scip_bundled"], default-features = false }
lazy_static = "1"
regex = "1"
thiserror = "1"
